<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/BackgroundFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_padding">
        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adult_content"
            android:layout_marginLeft="@dimen/view_padding"
            android:layout_marginStart="@dimen/view_padding"
            android:textSize="18sp"
            android:gravity="end"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/isAdult"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/view_padding"
            android:layout_marginRight="@dimen/view_padding" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/view_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_vote_from"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/countAverageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/averageSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_padding"
        android:max="9"
        android:progress="0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/view_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_vote_from"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/countYearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/yearSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/view_padding"
        android:min="1895"
        android:max="2021"
        android:progress="0"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="@dimen/view_padding"
        android:layout_gravity="center"/>



</LinearLayout>